--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "csc307-react-app2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd react-frontend && npm start"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "create-react-app": "^5.0.1"
   }
