--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/ivanreet507/React-First-App-2#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
